# search-plus-plus-v1-mcp

./: .gitignore  CMakeLists.txt  DEBUGGING.md  DOCKER.md  Dockerfile  LICENSE  README.md  install.sh  mcp.json  server.json
.github/workflows/: docker.yml
examples/: main.cpp
include/mcpp/: JsonRpc.h  Resource.h  SearchEngine.h  Server.h  Tool.h  Transport.h
release/: RELEASE.md
release/linux-x64/: mcpp_example  mcpp_launcher.sh
release/linux-x64/include/mcpp/: Prompt.h  Types.hpp
src/: JsonRpc.cpp  Prompt.cpp  Resource.cpp  SearchEngine.cpp  Server.cpp  Tool.cpp  Transport.cpp  Types.cpp
